fixup alignment and size of dc box in mcview and hide first dc box on load

--- a/projects/NonMaps/MCView/style.css
+++ b/projects/NonMaps/MCView/style.css
@@ -46,7 +46,7 @@ html, body {
 	margin-right: auto;
 	margin-top: auto;
 	margin-bottom: auto;
-	width: 600px;
+	width: 560px;
 	height: 24px;
     padding: 10px;
 }
